# hpp_human

./: CMakeLists.txt  README.md  package.xml
src/hpp/corbaserver/human/: robot.py
